<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            android:layout_marginTop="75dp"
            android:elevation="1000dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_reset_password_header"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_reset_password_desc"
                    android:textAlignment="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/et_sign_up_email"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconContentDescription="@string/content_description_start_icon_email"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etResetPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_reset_password"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/ProgressBarResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>