<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateEmailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            android:layout_marginTop="75dp"
            android:elevation="1000dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_update_email"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_update_email_desc"
                    android:textAlignment="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlAuthenticationEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/et_sign_up_email"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconContentDescription="@string/content_description_start_icon_email"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAuthenticationEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlAuthenticationPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/et_sign_up_password"
                    app:startIconDrawable="@drawable/baseline_password_24"
                    app:startIconContentDescription="string/content_description_start_icon_password"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAuthenticationPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbHideEmailAuthPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_sign_up_hide_password"/>

                <Button
                    android:id="@+id/btnAuthenticateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_authenticate_email"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_margin="15dp"
            android:layout_marginTop="75dp"
            android:elevation="1000dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvConfirmAuthenticationHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_confirm_authentication_header"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlUpdateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/et_sign_up_email"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconContentDescription="@string/content_description_start_icon_email"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUpdateEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnUpdateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_update_email"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/UpdateEmailProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</ScrollView>